# CoRe

./: CMakeLists.txt  README.md
cmake/: CoReConfig.cmake.in  SearchForStuff.cmake
components/: CMakeLists.txt  readme.txt
components/CoRe/: CMakeLists.txt
components/CoRe/include/CoRe/resources/: Resources.hpp
components/RobustManipulation/: CMakeLists.txt
components/utils/: Global.cpp  readme.txt
components/utils/include/: Global.hpp
components/utils/include/datastructures/: Datastructures.hpp
components/utils/include/math/: Math.hpp
demos/: CMakeLists.txt
tests/: CMakeLists.txt
